# tiny-rpg

./: .gitignore  CMakeLists.txt  Makefile  NPC_FILES.md  README.md  thirdpartylicenses  thirdpartylicenses.txt
include/: assertion.h  hostile_npc.h  inventory.h  item.h  microui.h  microui_raylib.h  npc_manager.h  passive_npc.h  player.h
src/: hostile_npc.c  item.c  main.c  microui.c  npc_manager.c  passive_npc.c  player.c
